# term-2

./: Bash.txt  Dockerfile  Earthquake-prediction-using-Machine-learning-models.txt  Earthquake_data_processed.xlsx  SQLModel, from Python to SQL.txt  main.py  pyproject.toml
asynhron/: 1  foundurls.txt
